[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/Particles/effect4.png" type="Texture" id=1]
[ext_resource path="res://Game_Parts/Player/PlayerBullet.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 2.0

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.963636 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.192053, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.667969, 0.667969, 0.667969, 0 )

[node name="PlayerBullet" type="Area2D"]
collision_layer = 32
collision_mask = 12
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="effect4" type="Sprite" parent="."]
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 1 )

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="LifeTime" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 23
lifetime = 0.6
speed_scale = 2.0
local_coords = false
emission_shape = 1
emission_sphere_radius = 2.0
gravity = Vector2( 0, 0 )
scale_amount_curve = SubResource( 3 )
color_ramp = SubResource( 2 )
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]
